--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -6,7 +6,9 @@
     },
     "root": true,
     "extends": [
-        
+        "plugin:react/recommended",
+        "airbnb", 
+        "plugin:react/jsx-runtime"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
