--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.5.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.1",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.3",
