--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,23 +1,59 @@
 {
     "env": {
         "browser": true,
-        "commonjs": true,
         "es2021": true,
         "node": true
     },
+    "root": true,
     "extends": [
-        "airbnb-base"
+        "plugin:react/recommended",
+        "airbnb", 
+        "plugin:react/jsx-runtime"
     ],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 12
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": 12,
+        "sourceType": "module"
     },
+    "plugins": [
+        "react",
+        "@typescript-eslint",
+        "react-hooks"
+    ],
     "rules": {
-        "consistent-return": "off",
-        "linebreak-style": 0
+        "no-nested-ternary": 0,
+        "no-use-before-define": "off",
+        "@typescript-eslint/no-use-before-define": ["error"],
+        "react/jsx-filename-extension": [ "warn", {"extensions": [".tsx"]} ],
+        "func-names": ["error", "never"],
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+                "ts": "never",
+                "tsx": "never"
+            }
+        ],
+        "no-shadow": "off",
+        "@typescript-eslint/no-shadow": ["error"],
+        "@typescript-eslint/explicit-function-return-type": [
+            "error",
+            {
+                "allowExpressions": true
+            }
+        ],
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn",
+        "import/prefer-default-export": "off",
+        "react/prop-types": "off",
+        "react/function-component-definition": [2, { "namedComponents": "arrow-function" }]
     },
-    "overrides": [
-        {
-            "files": [ "server/**/*.js" ]
+    "settings": {
+        "import/resolver": {
+        "typescript": {}
         }
-    ]
+    }
 }
