--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,12 @@
     "lint": "eslint -c .eslintrc.json --ext .ts,.tsx .",
     "lint:fix": "npm run lint -- --fix"
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
